--- a/iMatMini/src/iMat/FXML/CartPage.fxml
+++ b/iMatMini/src/iMat/FXML/CartPage.fxml
@@ -7,10 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/cart.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iMat.IMatController">
+<fx:root prefHeight="539.0" prefWidth="1095.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/cart.css" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="14.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#loadStart" prefHeight="84.0" prefWidth="138.0" style="-fx-background-color: #00000000;">
+      <Button fx:id="keepShop" layoutX="14.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="84.0" prefWidth="138.0" style="-fx-background-color: #00000000;">
          <graphic>
             <ImageView fitHeight="97.0" fitWidth="142.0" pickOnBounds="true" preserveRatio="true" styleClass="button">
                <image>
@@ -72,4 +71,4 @@
          </font>
       </Label>
    </children>
-</AnchorPane>
+</fx:root>
