--- a/iMatMini/src/iMat/FXML/ShopPage.fxml
+++ b/iMatMini/src/iMat/FXML/ShopPage.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -90,7 +91,7 @@
                         </Pane>
                      </children>
                   </Pane>
-                  <AnchorPane fx:id="productFlowPane" layoutY="315.0" prefHeight="293.0" prefWidth="874.0" AnchorPane.bottomAnchor="-141.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="315.0" />
+                  <FlowPane fx:id="productFlowPane" layoutX="1.0" layoutY="307.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="761.0" />
                </children>
             </AnchorPane>
          </content>
