--- a/iMatMini/src/iMat/FXML/MainWindow.fxml
+++ b/iMatMini/src/iMat/FXML/MainWindow.fxml
@@ -19,6 +19,7 @@
                               <AnchorPane fx:id="registerPaneFXML" prefHeight="200.0" prefWidth="200.0" />
                               <AnchorPane fx:id="cartPaneFXML" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" />
                               <AnchorPane fx:id="startPaneFXML" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" />
+                              <AnchorPane fx:id="productDescriptionLightBoxFXML" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="1095.0" />
                            </children>
                         </StackPane>
                      </children>
